--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <h1> Aziza Brown </h1>
             <h5>Junior web developer</h5>
             <p>Learning things that help me help the world...</p>
-            <button lass="mybutton"> <a class="nav-link js-scroll-trigger" href="#education">
+            <button class="mybutton"> <a class="nav-link js-scroll-trigger" href="#education">
                 <div class="btn">See more</div>
               </a></button>
   </section>
@@ -147,70 +147,70 @@
       <div class="parallax-exp"></div>
       <h2>Experience</h2>
       <div clas="firstjob">
-        <img class="working" src="img/header-gifs/working-min.gif">
+        <img class="working" src="img/header-gifs/working_min.jpg">
         <div class="experience">
+
           <div>
-            <div>
-              <p>I've been doing small (and sometimes big) part-time jobs since I was 15.
-                Independency has been an integral part of my happiness since then, and during my studies I've made
-                sure to
-                continue my money making endavours, whether it's dogsitting or scanning beaches with a metal
-                detector.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div>
-        </div>
-        <div class="second-part">
-          <div class="experience1">
-            <div>
-              <h3 class="mb-0">Store Manager</h3>
-              <p>WAZA - Quality Japanese goods in South Africa</p>
-              <p>October 2018 - January 2019</p>
-              <div class="text"> I managed the store and worked with customers and their orders. This included cash
-                and card sales,
-                booking couriers online, managing the inventory and maintaining the online store. <br> This experience
-                allowed me to learn
-                the fundamentals of customer service and Japanese culture.
-              </div>
-            </div>
-          </div>
-
-
-          <div class="experience2">
-            <div>
-              <h3 class="mb-0">Private Arabic Tutor</h3>
-              <p>Private Family</p>
-              <p>February 2017 - September 2017</p>
-              <div class="text"> I shared and cemented my knowledge of Arabic and Islamic literature by teaching two
-                children the
-                basics
-                of
-                those subjects.
-                With lots of research and trial and error, I gained the fundamental tools necessary for teaching
-                children,
-                began practicing effective content curation,
-                and became more organised and responsible.
-
-              </div>
-            </div>
-          </div>
-          <div class="experience3">
-            <h3>English Tutor</h3>
-            <p>Private Family</p>
-            <p>September 2016 - January 2017</p>
-            <div class="text"> I helped two Egyptian children with their English and Maths homework. This involved
-              extensive
-              research
-              on how to help children learn a foreign language
-              while enjoying it at the same time. I created and collected games that helped them, created writing
-              exercises and learnt how to draw up time tables
-              and a miniature curriculum.
-            </div>
+            <p>I've been doing small (and sometimes big) part-time jobs since I was 15.
+              Independency has been an integral part of my happiness since then, and during my studies I've made
+              sure to
+              continue my money making endavours, whether it's dogsitting or scanning beaches with a metal
+              detector.
+            </p>
           </div>
         </div>
       </div>
+      <div>
+      </div>
+      <div class="second-part">
+        <div class="experience1">
+          <div>
+            <h3 class="mb-0">Store Manager</h3>
+            <p>WAZA - Quality Japanese goods in South Africa</p>
+            <p>October 2018 - January 2019</p>
+            <div class="text"> I managed the store and worked with customers and their orders. This included cash
+              and card sales,
+              booking couriers online, managing the inventory and maintaining the online store. <br> This experience
+              allowed me to learn
+              the fundamentals of customer service and Japanese culture.
+            </div>
+          </div>
+        </div>
+
+
+        <div class="experience2">
+          <div>
+            <h3 class="mb-0">Private Arabic Tutor</h3>
+            <p>Private Family</p>
+            <p>February 2017 - September 2017</p>
+            <div class="text"> I shared and cemented my knowledge of Arabic and Islamic literature by teaching two
+              children the
+              basics
+              of
+              those subjects.
+              With lots of research and trial and error, I gained the fundamental tools necessary for teaching
+              children,
+              began practicing effective content curation,
+              and became more organised and responsible.
+
+            </div>
+          </div>
+        </div>
+        <div class="experience3">
+          <h3>English Tutor</h3>
+          <p>Private Family</p>
+          <p>September 2016 - January 2017</p>
+          <div class="text"> I helped two Egyptian children with their English and Maths homework. This involved
+            extensive
+            research
+            on how to help children learn a foreign language
+            while enjoying it at the same time. I created and collected games that helped them, created writing
+            exercises and learnt how to draw up time tables
+            and a miniature curriculum.
+          </div>
+        </div>
+      </div>
+    </div>
 
 
   </section>
@@ -239,7 +239,7 @@
         <i class="fab fa-vuejs fa-8x "></i>
         <i class="fab fa-github fa-8x"></i>
         <i class="fas fa-terminal fa-8x"></i>
-        <img class="sql" src="images/mysql.png" width="20%">
+
 
       </div>
     </div>
